--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gowtham V | Principal Data Scientist & GenAI Engineer</title>
 
+    <!-- Styles -->
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Fonts (enterprise-safe) -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+    <!-- =========================
+         HERO / INTRO SECTION
+    ========================== -->
+    <header class="hero">
+        <div class="hero-container">
+
+            <!-- Left: Text -->
+            <div class="hero-text">
+                <h1>Gowtham V</h1>
+                <h2>Principal Data Scientist & GenAI Engineer</h2>
+
+                <p class="hero-subtitle">
+                    11+ years building enterprise-scale data platforms, AI systems, 
+                    and cloud-native solutions across healthcare, finance, and big tech.
+                </p>
+
+                <div class="hero-links">
+                    <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/gowthamvsn" target="_blank">GitHub</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#experience">Experience</a>
+                    <a href="#contact">Contact</a>
+                </div>
+            </div>
+
+            <!-- Right: Image -->
+            <div class="hero-image">
+                <!-- Replace profile.jpg with any image you want -->
+                <img src="assets/profile.jpg" alt="Gowtham V profile photo" />
+            </div>
+
+        </div>
+    </header>
+
+</body>
+</html>
