--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </p>
 
                 <div class="hero-links">
-                    <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+                    <a href="www.linkedin.com/in/gowtham-vuppaladhadiam-bb54bb111" target="_blank">LinkedIn</a>
                     <a href="https://github.com/gowthamvsn" target="_blank">GitHub</a>
                     <a href="#projects">Projects</a>
                     <a href="#experience">Experience</a>
@@ -42,7 +42,7 @@
             <!-- Right: Image -->
             <div class="hero-image">
                 <!-- Replace profile.jpg with any image you want -->
-                <img src="assets/profile.jpg" alt="Gowtham V profile photo" />
+                <img src="assets/GowthamPic.jpg" alt="Gowtham V profile photo" />
             </div>
 
         </div>
