--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             </p>
             <div class="hero-links">
                 <a href="https://github.com/gowthamvsn" target="_blank">GitHub</a>
-                <a href="www.linkedin.com/in/gowtham-vuppaladhadiam-bb54bb111" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/gowtham-vuppaladhadiam-bb54bb111" target="_blank" rel="noopener noreferrer">
+    LinkedIn </a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </div>
