--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <p>Email: <strong>your.email@example.com</strong></p>
     <p>
         <a href="https://github.com/gowthamvsn">GitHub</a> |
-        <a href="https://linkedin.com">LinkedIn</a>
+        <a href="www.linkedin.com/in/gowtham-vuppaladhadiam-bb54bb111">LinkedIn</a>
     </p>
 </section>
 
