--- a/index.html
+++ b/index.html
@@ -116,7 +116,30 @@
         <a href="https://gowthamvsn.github.io/ai-tutor-landing-page/" target="_blank">Live Demo →</a>
     </div>
 </section>
+<!-- ================= Certifications ================= -->
 
+    <section id="certifications" class="alt">
+    <h2>Certifications</h2>
+
+    <div class="card">
+        <ul>
+            <li>Microsoft Certified: Azure Database Administrator Associate</li>
+            <li>Microsoft Certified: Azure AI Fundamentals (AI-900)</li>
+            <li>Microsoft Certified: Azure Data Scientist Associate (DP-100)</li>
+            <li>Design & Implementation of Data Science Solutions on Azure</li>
+            <li>Advanced Data Science & AI – IIT Madras (Intellipaat)</li>
+            <li>AWS SysOps Administrator</li>
+        </ul>
+
+        <div class="image-grid">
+            <div class="image-placeholder">Certificate Image Placeholder</div>
+            <div class="image-placeholder">Certificate Image Placeholder</div>
+            <div class="image-placeholder">Certificate Image Placeholder</div>
+        </div>
+    </div>
+</section>
+
+    
 <!-- ================= TEACHING ================= -->
 <section id="teaching">
     <h2>Teaching & Thought Leadership</h2>
