--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h3>Cognizant (2016–2021)</h3>
         <p class="role">Technical Lead – Capital One</p>
         <ul>
-            <li>Automated cloud server rehydration (120 min → 90 sec).</li>
+            <li>Automated cloud server rehydration usong python(120 min → 90 sec).</li>
             <li>Introduced MongoDB & Python into banking workflows.</li>
             <li>Managed HA Oracle, MSSQL, MongoDB systems on AWS.</li>
         </ul>
