--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <a href="#experience">Experience</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
-            <a href="#teaching">Teaching</a>
+            <a href="#certifications">Certifications</a>
+            <a href="#leadership">Leadership</a>
             <a href="#contact">Contact</a>
         </div>
     </div>
@@ -27,37 +28,36 @@
 <!-- ================= HERO ================= -->
 <header class="hero">
     <div class="hero-container">
-        <div>
+        <div class="hero-text">
             <h1>Principal Data Scientist & GenAI Engineer</h1>
             <p class="hero-desc">
                 11+ years designing enterprise-scale data platforms, GenAI systems,
                 and cloud-native solutions across healthcare, finance, and big tech.
             </p>
             <div class="hero-links">
-                <a href="https://github.com/gowthamvsn" target="_blank">GitHub</a>
-                <a href="https://www.linkedin.com/in/gowtham-vuppaladhadiam-bb54bb111" target="_blank" rel="noopener noreferrer">
-    LinkedIn </a>
+                <a href="https://github.com/gowthamvsn" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://www.linkedin.com/in/gowtham-vuppaladhadiam-bb54bb111" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </div>
         </div>
-        <img src="assets/GowthamPic.jpg" alt="Profile photo">
+        <img src="assets/profile.jpg" alt="Gowtham V profile photo">
     </div>
 </header>
 
 <!-- ================= EXPERIENCE ================= -->
-<section id="experience">
+<section id="experience" class="section alt">
     <h2>Experience</h2>
 
     <div class="card">
         <h3>Bosch Global Software (2021–2024)</h3>
         <p class="role">Team Lead – Data Science & Databases</p>
         <ul>
-            <li>Led an LLM-driven Cloud Cost Optimization System reducing spend by ~16%.</li>
-            <li>Built NLP-based ServiceNow routing system with 92% accuracy.</li>
-            <li>Managed MongoDB, PostgreSQL, MySQL, MSSQL, Redis at enterprise scale.</li>
-            <li>Mentored a 5-member team; worked across DevOps, Cloud, and Sales.</li>
-            <li>Executed on-site customer migrations and Atlas-based NoSQL transitions.</li>
+            <li>Designed and led an LLM-driven Cloud Cost Optimization System reducing spend by ~16%.</li>
+            <li>Built NLP-based ServiceNow ticket routing with 92% accuracy.</li>
+            <li>Owned enterprise MongoDB, PostgreSQL, MySQL, MSSQL, Redis platforms.</li>
+            <li>Led and mentored a 5-member engineering team.</li>
+            <li>Executed on-site customer migrations and RDBMS → NoSQL transformations.</li>
         </ul>
     </div>
 
@@ -65,8 +65,8 @@
         <h3>Cognizant (2016–2021)</h3>
         <p class="role">Technical Lead – Capital One</p>
         <ul>
-            <li>Automated cloud server rehydration usong python(120 min → 90 sec).</li>
-            <li>Introduced MongoDB & Python into banking workflows.</li>
+            <li>Automated cloud Linux server rehydration (120 minutes → 90 seconds).</li>
+            <li>Introduced MongoDB & Python into banking production workflows.</li>
             <li>Managed HA Oracle, MSSQL, MongoDB systems on AWS.</li>
         </ul>
     </div>
@@ -82,7 +82,7 @@
 </section>
 
 <!-- ================= SKILLS ================= -->
-<section id="skills">
+<section id="skills" class="section">
     <h2>Core Expertise</h2>
     <div class="grid">
         <div class="skill">GenAI & LLMs (OpenAI, Gemini)</div>
@@ -95,30 +95,30 @@
 </section>
 
 <!-- ================= PROJECTS ================= -->
-<section id="projects">
+<section id="projects" class="section alt">
     <h2>Flagship Projects</h2>
 
     <div class="card">
         <h3>Clinical Assistant AI</h3>
         <p>RAG-based healthcare assistant using MIMIC-IV, Gemini, Azure OpenAI.</p>
-        <a href="https://github.com/gowthamvsn/Clinical_Assistant_Chatbot_Project" target="_blank">GitHub →</a>
+        <a href="https://github.com/gowthamvsn/Clinical_Assistant_Chatbot_Project" target="_blank" rel="noopener noreferrer">GitHub →</a>
     </div>
 
     <div class="card">
         <h3>Mental Health Wellness Chatbot</h3>
-        <p>Responsible AI chatbot focused on mental wellness, not diagnosis.</p>
-        <a href="https://github.com/gowthamvsn/Mental_Health_Wellness_Chatbot" target="_blank">GitHub →</a>
+        <p>Responsible AI chatbot focused on mental wellness (non-diagnostic).</p>
+        <a href="https://github.com/gowthamvsn/Mental_Health_Wellness_Chatbot" target="_blank" rel="noopener noreferrer">GitHub →</a>
     </div>
 
     <div class="card">
         <h3>AI Tutor Platform</h3>
         <p>Interactive AI-driven learning assistant with live demos.</p>
-        <a href="https://gowthamvsn.github.io/ai-tutor-landing-page/" target="_blank">Live Demo →</a>
+        <a href="https://gowthamvsn.github.io/ai-tutor-landing-page/" target="_blank" rel="noopener noreferrer">Live Demo →</a>
     </div>
 </section>
-<!-- ================= Certifications ================= -->
 
-    <section id="certifications" class="alt">
+<!-- ================= CERTIFICATIONS ================= -->
+<section id="certifications" class="section">
     <h2>Certifications</h2>
 
     <div class="card">
@@ -126,37 +126,45 @@
             <li>Microsoft Certified: Azure Database Administrator Associate</li>
             <li>Microsoft Certified: Azure AI Fundamentals (AI-900)</li>
             <li>Microsoft Certified: Azure Data Scientist Associate (DP-100)</li>
-            <li>Design & Implementation of Data Science Solutions on Azure</li>
-            <li>Advanced Data Science & AI – IIT Madras (Intellipaat)</li>
+            <li>Advanced Data Science & AI – IIT Madras</li>
             <li>AWS SysOps Administrator</li>
         </ul>
 
         <div class="image-grid">
-            <div class="image-placeholder">Certificate Image Placeholder</div>
-            <div class="image-placeholder">Certificate Image Placeholder</div>
-            <div class="image-placeholder">Certificate Image Placeholder</div>
+            <img src="assets/cert_placeholder.png" alt="Certificate placeholder">
+            <img src="assets/cert_placeholder.png" alt="Certificate placeholder">
+            <img src="assets/cert_placeholder.png" alt="Certificate placeholder">
         </div>
     </div>
 </section>
 
-    
-<!-- ================= TEACHING ================= -->
-<section id="teaching">
-    <h2>Teaching & Thought Leadership</h2>
-    <ul>
-        <li>LinkedIn technical explainer videos on AI & cloud systems</li>
-        <li>Hackathon mentor & winner</li>
-        <li>Mentored junior engineers and startups</li>
-    </ul>
+<!-- ================= LEADERSHIP ================= -->
+<section id="leadership" class="section alt">
+    <h2>Leadership & Community Impact</h2>
+
+    <div class="card">
+        <ul>
+            <li><strong>Founder & President – Society for Student AI Innovation (UNT)</strong></li>
+            <li>Led healthcare AI collaborations with a Texas-based hospital.</li>
+            <li>Team Lead at Bosch and mentor to junior engineers.</li>
+            <li>Led robotics competitions during undergraduate studies.</li>
+        </ul>
+
+        <div class="image-grid">
+            <img src="assets/leadership_placeholder.png" alt="Leadership placeholder">
+            <img src="assets/leadership_placeholder.png" alt="Leadership placeholder">
+            <img src="assets/leadership_placeholder.png" alt="Leadership placeholder">
+        </div>
+    </div>
 </section>
 
 <!-- ================= CONTACT ================= -->
-<section id="contact">
+<section id="contact" class="section">
     <h2>Contact</h2>
     <p>Email: <strong>your.email@example.com</strong></p>
     <p>
-        <a href="https://github.com/gowthamvsn">GitHub</a> |
-        <a href="www.linkedin.com/in/gowtham-vuppaladhadiam-bb54bb111">LinkedIn</a>
+        <a href="https://github.com/gowthamvsn" target="_blank" rel="noopener noreferrer">GitHub</a> |
+        <a href="https://www.linkedin.com/in/gowtham-vuppaladhadiam-bb54bb111" target="_blank" rel="noopener noreferrer">LinkedIn</a>
     </p>
 </section>
 
