--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="#contact">Contact</a>
             </div>
         </div>
-        <img src="assets/profile.jpg" alt="Gowtham V profile photo">
+        <img src="assets/GowthamPic.jpg" alt="Gowtham V profile photo">
     </div>
 </header>
 
