--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@
         </ul>
 
         <div class="image-grid">
-            <img src="assets/cert_placeholder.png" alt="Certificate placeholder">
-            <img src="assets/cert_placeholder.png" alt="Certificate placeholder">
-            <img src="assets/cert_placeholder.png" alt="Certificate placeholder">
+            <img src="assets/dp100cert.jpg" alt="Certificate placeholder">
+            <img src="assets/az900.jpg" alt="Certificate placeholder">
+            <img src="assets/dp300cert.jpg" alt="Certificate placeholder">
+            <img src="assets/intellipaatcert.jpg" alt="Certificate placeholder">
         </div>
     </div>
 </section>
@@ -151,9 +152,9 @@
         </ul>
 
         <div class="image-grid">
-            <img src="assets/leadership_placeholder.png" alt="Leadership placeholder">
-            <img src="assets/leadership_placeholder.png" alt="Leadership placeholder">
-            <img src="assets/leadership_placeholder.png" alt="Leadership placeholder">
+            <img src="assets/reseacrhday3.jpg" alt="Leadership placeholder">
+            <img src="assets/sparkeventatunt.jpg" alt="Leadership placeholder">
+            <img src="assets/hackathon_display.jpg" alt="Leadership placeholder">
         </div>
     </div>
 </section>
@@ -161,7 +162,7 @@
 <!-- ================= CONTACT ================= -->
 <section id="contact" class="section">
     <h2>Contact</h2>
-    <p>Email: <strong>your.email@example.com</strong></p>
+    <p>Email: <strong>mastergowtham1906@gmail.com</strong></p>
     <p>
         <a href="https://github.com/gowthamvsn" target="_blank" rel="noopener noreferrer">GitHub</a> |
         <a href="https://www.linkedin.com/in/gowtham-vuppaladhadiam-bb54bb111" target="_blank" rel="noopener noreferrer">LinkedIn</a>
