--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div class="image-grid">
             <img src="assets/dp100cert.jpg" alt="Certificate placeholder">
-            <img src="assets/az900.jpg" alt="Certificate placeholder">
+            <img src="assets/az900cert.jpg" alt="Certificate placeholder">
             <img src="assets/dp300cert.jpg" alt="Certificate placeholder">
             <img src="assets/intellipaatcert.jpg" alt="Certificate placeholder">
         </div>
