--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="#experience">Experience</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
+            <a href="#achievements">Achievements</a>
             <a href="#certifications">Certifications</a>
             <a href="#leadership">Leadership</a>
             <a href="#contact">Contact</a>
@@ -117,6 +118,42 @@
     </div>
 </section>
 
+
+<!-- ================= ACHIEVEMENTS ================= -->
+<section id="achievements" class="alt">
+    <h2>Achievements & Recognition</h2>
+
+    <div class="card">
+        <ul>
+            <li>
+                🏆 <strong>Hackathon Winner</strong> – Built AI-driven solutions addressing real-world enterprise problems.
+            </li>
+            <li>
+                🏆 <strong>Receipient of Simha scholarship</strong>. For outstanding performance in the education.
+            </li>
+            <li>
+                🥇 <strong>AWS US Tech Alliance West Preliminary Jam</strong> – Ranked second by solving cloud architecture and optimization challenges.
+            </li>
+            <li>
+                📉 <strong>16% Cloud Cost Reduction</strong> – Designed and led an LLM-powered Cloud Cost Optimization System at Bosch.
+            </li>
+            <li>
+                🎯 <strong>92% Accuracy NLP System</strong> – Automated ServiceNow ticket routing from vague descriptions.
+            </li>
+            <li>
+                🤝 <strong>Startup Enablement</strong> – Helped 30+ startups successfully integrate with Bosch Cloud data platforms.
+            </li>
+        </ul>
+
+        <div class="image-grid">
+            <div class="assets/hackathon_winner.jpg">Hackathon Image</div>
+            <div class="assets/awsjamcert.jpg">AWS Jam Certificate</div>
+            <div class="assets/sinhaaward.jpg">Award / Recognition Photo</div>
+        </div>
+    </div>
+</section>
+
+    
 <!-- ================= CERTIFICATIONS ================= -->
 <section id="certifications" class="section">
     <h2>Certifications</h2>
