--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
         </ul>
 
         <div class="image-grid">
-            <div class="assets/hackathon_winner.jpg">Hackathon Image</div>
-            <div class="assets/awsjamcert.jpg">AWS Jam Certificate</div>
-            <div class="assets/sinhaaward.jpg">Award / Recognition Photo</div>
+            <div src="assets/hackathon_winner.jpg">Hackathon Image</div>
+            <div src="assets/awsjamcert.jpg">AWS Jam Certificate</div>
+            <div src="assets/sinhaaward.jpg">Award / Recognition Photo</div>
         </div>
     </div>
 </section>
