--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <div class="card">
         <ul>
             <li>
-                🏆 <strong>Hackathon Winner</strong> – Built AI-driven solutions addressing real-world enterprise problems.
+                🏆 <strong>Hackathon Winner</strong> – Built AI-driven solution addressing real-world enterprise problems.
             </li>
             <li>
                 🏆 <strong>Receipient of Sihha scholarship</strong>. For outstanding performance in the education.
@@ -192,6 +192,7 @@
             <img src="assets/reseacrhday3.jpg" alt="Leadership placeholder">
             <img src="assets/sparkeventatunt.jpg" alt="Leadership placeholder">
             <img src="assets/hackathon_display.jpg" alt="Leadership placeholder">
+            <img src="assets/THIA_Nora_Cox.jpg" alt="Leadership placeholder">
         </div>
     </div>
 </section>
