--- a/index.html
+++ b/index.html
@@ -103,12 +103,27 @@
         <h3>Clinical Assistant AI</h3>
         <p>RAG-based healthcare assistant using MIMIC-IV, Gemini, Azure OpenAI.</p>
         <a href="https://github.com/gowthamvsn/Clinical_Assistant_Chatbot_Project" target="_blank" rel="noopener noreferrer">GitHub →</a>
+        <p>
+      <a href="https://www.youtube.com/watch?v=ZTzDtUyk4LE"
+     target="_blank"
+     rel="noopener noreferrer">
+     ▶ Watch Project Demo
+  </a>
+</p>
     </div>
 
     <div class="card">
         <h3>Mental Health Wellness Chatbot</h3>
         <p>Responsible AI chatbot focused on mental wellness (non-diagnostic).</p>
         <a href="https://github.com/gowthamvsn/Mental_Health_Wellness_Chatbot" target="_blank" rel="noopener noreferrer">GitHub →</a>
+        <p>
+      <a href="https://www.youtube.com/watch?v=UoizF_24ur0"
+     target="_blank"
+     rel="noopener noreferrer">
+     ▶ Watch Project Demo
+  </a>
+</p>
+
     </div>
 
     <div class="card">
