--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </div>
-        </div>
-        <img src="assets/GowthamPic.jpg" alt="Gowtham V profile photo">
+        <div class="hero-image">
+  <img src="assets/GowthamPic.jpg" alt="Gowtham V">
+</div>
+
     </div>
 </header>
 
