--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
         </ul>
     </div>
 
+        <div class="card">
+        <h3>Cognizant (2016–2021)</h3>
+        <p class="role">Technical Lead – Capital One</p>
+        <ul>
+            <li>Automated cloud Linux server rehydration (120 minutes → 90 seconds).</li>
+            <li>Introduced MongoDB & Python into banking production workflows.</li>
+            <li>Managed HA Oracle, MSSQL, MongoDB systems on AWS.</li>
+        </ul>
+    </div>
+    
     <div class="card">
         <h3>Wipro (2013–2016)</h3>
         <p class="role">Oracle Database Administrator – Citi</p>
