--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h3>Cognizant (2016–2021)</h3>
         <p class="role">Technical Lead – Capital One</p>
         <ul>
-            <li>Automated cloud Linux server rehydration (120 minutes → 90 seconds).</li>
+            <li>Automated cloud Linux server rehydration using python (120 minutes → 90 seconds).</li>
             <li>Introduced MongoDB & Python into banking production workflows.</li>
             <li>Managed HA Oracle, MSSQL, MongoDB systems on AWS.</li>
         </ul>
