--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 🏆 <strong>Hackathon Winner</strong> – Built AI-driven solution addressing real-world enterprise problems.
             </li>
             <li>
-                🏆 <strong>Receipient of Sihha scholarship</strong>. For outstanding performance in the education.
+                🏆 <strong>Receipient of Sinha scholarship</strong>. For outstanding performance in the education.
             </li>
             <li>
                 🥇 <strong>AWS US Tech Alliance West Preliminary Jam</strong> – Ranked second by solving cloud architecture and optimization challenges.
